# actix-ws-fuckery

./: Cargo.toml  README.md
src/: main.rs  ws.rs
src/models/: websocket.rs
src/models/websocket/: messages.rs
