[package]
name = "actix-ws-fuckery"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
anyhow = "1.0.95"
bytestring = "1.4.0"
dashmap = "6.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.13.1", features = ["v4"] }
